# botapest

./: .gitignore  README.md  cityseed.py  hooks.py  justfile  pyproject.toml  server.py
botapest/: cli.py  hooks.py  nation.py  seed.py  server.py  zone.py
botapest/static/: city-live.js  city-render.js  city-scape.js  city.html  city.js  hotel.js  index.html  nation.html  nation.js
city/: maisight.json
static/: city-data.json  city-live.js  city-render.js  city.html  city.js  hotel.js  index.html  render.js
