[project]
name = "botapest"
version = "0.2.0"
description = "Botapest City — Habbo-style visualization of Claude Code agents building your repo as a city"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "uvicorn>=0.29"]

[project.scripts]
botapest = "botapest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["botapest"]
