[project]
name = "botapest"
version = "0.3.1"
description = "Botapest City — Habbo-style visualization of Claude Code agents building your repo as a city"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "LeChristopher Blackwell", email = "codeblackwell@gmail.com" }]
keywords = ["claude-code", "visualization", "agents", "isometric", "pixel-art"]
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "uvicorn>=0.29"]

[project.urls]
Homepage = "https://github.com/CodeBlackwell/botapest"
Source = "https://github.com/CodeBlackwell/botapest"
Issues = "https://github.com/CodeBlackwell/botapest/issues"

[project.scripts]
botapest = "botapest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["botapest"]
